src2/objects/ContractLineItem.object
<CustomObject>
    <fields>
        <fullName>ContractLineItemMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Mirror</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Item_Id__c</fullName>
        <label>Contract Item Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Item_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Contract Item UUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_TC_Date__c</fullName>
        <label>End TC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NES_AccountTelemetry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Telemetry Account</label>
        <referenceTo>NES_AccountTelemetry__c</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_AssetAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Address</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_ContractCategory__c</fullName>
        <label>Contract Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                    <label>FREE</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>LEASING</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>MISC.</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>OPERATING</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>PCS</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>RENT</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>SALES</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>TRAIL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_ContractState__c</fullName>
        <label>Contract State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_ContractType__c</fullName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Contract_Telemetry_Opt_in__c</fullName>
        <label>Contract - Telemetry Opt-in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                    <label>Full</label>
                </value>
                <value>
                    <fullName>EGC</fullName>
                    <label>No Capsule recognition</label>
                </value>
                <value>
                    <fullName>TO</fullName>
                    <label>Technical</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Off</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_ProcessedDate__c</fullName>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NES_StopDate__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NES_StopKeepMachineAlive__c</fullName>
        <label>Stop - Keep Machine Alive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_StopNewContract__c</fullName>
        <label>Stop - New Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_StopOldContract__c</fullName>
        <label>Stop - Previous Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Technician__c</fullName>
        <label>Technician</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_TC_Date__c</fullName>
        <label>Start TC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Code__c</fullName>
        <label>Stop Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Stop_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_TC_Date__c</fullName>
        <label>Stop TC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Telemetry_Contract_ID__c</fullName>
        <label>Telemetry Contract ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Agent_Contract</fullName>
        <active>true</active>
        <label>Agent Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_Contract</fullName>
        <active>true</active>
        <label>Nespresso Contract</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>